replace new Foo(...) with Foo.valueOf.  patch by Edward Ribeiro; reviewed by jbellis for CASSANDRA-246
git-svn-id: https://svn.apache.org/repos/asf/incubator/cassandra/trunk@787249 13f79535-47bb-0310-9956-ffa450edef68